# lightrace-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
src/lightrace/: __init__.py  client.py  context.py  dev_server.py  exporter.py  observation.py  otel_exporter.py  security.py  tool_client.py  trace.py  types.py  utils.py
src/lightrace/integrations/: __init__.py  _base.py  anthropic.py  claude_agent_sdk.py  crewai.py  langchain.py  llamaindex.py  openai.py
tests/: conftest.py  test_anthropic.py  test_claude_agent_sdk.py  test_client.py  test_context.py  test_crewai.py  test_dev_server.py  test_exporter.py  test_langchain.py  test_llamaindex.py  test_observation.py  test_openai.py  test_replay.py  test_security.py  test_tool_invocation.py  test_trace.py
