[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightrace"
version = "0.1.3"
description = "Lightweight LLM tracing SDK with remote tool invocation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Lightrace Contributors" }]
keywords = ["llm", "tracing", "observability", "langfuse", "opentelemetry", "tool-invocation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1",
    "websockets>=13,<17",
    "pydantic>=2,<3",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.urls]
Repository = "https://github.com/SKE-Labs/lightrace-python"
Changelog = "https://github.com/SKE-Labs/lightrace-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.15",
    "mypy>=1.0",
    "pre-commit>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lightrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["websockets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langchain_core.*"]
ignore_missing_imports = true
