[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightrace"
version = "1.0.7"
description = "Agentic development kit — LLM tracing, tool management, and agent primitives"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Ganchuluun Narantsatsralt", email = "tsatsralt@swifttech.cloud"}]
keywords = ["llm", "tracing", "observability", "opentelemetry", "agent", "adk", "tool-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.urls]
Repository = "https://github.com/SKE-Labs/lightrace-python"
Changelog = "https://github.com/SKE-Labs/lightrace-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.0"]
crewai = ["crewai>=0.80"]
llamaindex = ["llama-index-core>=0.11"]
claude-agent-sdk = ["claude-agent-sdk>=0.1"]
all = [
    "langchain-core>=0.2",
    "anthropic>=0.39",
    "openai>=1.0",
    "crewai>=0.80",
    "llama-index-core>=0.11",
    "claude-agent-sdk>=0.1",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.15",
    "mypy>=1.0",
    "pre-commit>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lightrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["langchain_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["crewai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["llama_index.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["claude_agent_sdk.*"]
ignore_missing_imports = true
